updates iframe on change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "daggerjs",
+  "name": "@miyi/dagger.js",
   "version": "0.9.18",
   "description": "a new cdn link for the prototype of dagger -v1.0.0",
   "main": "dagger.js",
